Start on some css

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,11 +1,14 @@
-<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
-<script src="lib/amplify.min.js"></script>
-<script src='lib/knockout-2.0.0.js'></script>
-<script src="lib/knockout.mapping-latest.js"></script>
-<script src="lib/linq.min.js"></script>
-<script src="lib/jquery.xml2json.js"></script>
-<script src="pivotal.js"></script>
-<script src="popup.js"></script>
+<head>
+	<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+	<script src="lib/amplify.min.js"></script>
+	<script src='lib/knockout-2.0.0.js'></script>
+	<script src="lib/knockout.mapping-latest.js"></script>
+	<script src="lib/linq.min.js"></script>
+	<script src="lib/jquery.xml2json.js"></script>
+	<script src="pivotal.js"></script>
+	<script src="popup.js"></script>
+	<link rel="stylesheet" type="text/css" href="popup.css" />
+</head>
 <html>
 	<body style="width: 550px;">
 		<img src="refresh.png" data-bind="click: refresh"/>
