--- a/src/popup.html
+++ b/src/popup.html
@@ -12,6 +12,7 @@
 <html>
 	<body style="width: 550px;">
 		<img src="refresh.png" data-bind="click: refresh"/>
+		<input type="text" data-bind="value: filter"/>
 		<div data-bind='foreach: projects'>
 			<ul>
 				<li data-bind="visible: stories().length > 0">
