Remove border around image.

--- a/src/popup.html
+++ b/src/popup.html
@@ -37,7 +37,7 @@
 									<a data-bind="click: unStart, visible: isStarted" class="unStart">UnStart</a>
 								</div>
 								<div class="icons" style="float:left">			
-									<img class="storyTypeIcon"></img>
+									<div class="storyTypeIcon"></div>
 								</div>
 								<span class="story_name" style="display:block">
 									<span class="story_labels">
